--- a/style.css
+++ b/style.css
@@ -161,63 +161,17 @@ input.full-width {
   cursor: pointer;
 }
 
-/* The switch - the box around the slider */
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 50px !important;
-  height: 20px;
+.checked {
+  background-color: grey; /* Unchecked state */
+  border: 2px solid grey; ;
 }
-
-/* Hide default HTML checkbox */
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  transition: .4s;
+button {
+  background-color: #FFDC01; /* Checked state */
+  border: 2px solid #FFDC01;
   border-radius: 5px;
+  width: 70px;
+  cursor: pointer;
 }
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 15px;
-  width: 15px;
-  left: 4px;
-  bottom: 3px;
-  background-color: white;
-  transition: .4s;
-  border-radius: 50%;
-}
-
-input:checked + .slider {
-  background-color: #FFDC01;
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px #FFDC01;
-}
-
-input:checked + .slider:before {
-  transform: translateX(26px);
-}
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
+button:hover{
+  border: 2px solid black;
 }
